feat: task 3 not completed

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ espresso-core = "3.5.1"
 lifecycle = "2.7.0"
 activity-compose = "1.8.2"
 compose-bom = "2024.03.00"
+navigation = "2.7.7"
 
 coroutines = "1.8.0"
 serialization-json = "1.6.3"
@@ -19,6 +20,8 @@ ktor = "2.3.8"
 coil = "2.6.0"
 google-play-services = "21.2.0"
 paging = "3.2.1"
+
+realm = "1.11.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core" }
@@ -39,6 +42,8 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 
 koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
 koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
@@ -61,6 +66,8 @@ paging-common = { group = "androidx.paging", name = "paging-common-ktx", version
 paging-runtime = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging" }
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
 
+realm = { group = "io.realm.kotlin", name = "library-base", version.ref = "realm" }
+
 [plugins]
 application = { id = "com.android.application", version.ref = "agp" }
 android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
@@ -68,3 +75,4 @@ kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+realm = { id = "io.realm.kotlin", version.ref = "realm" }
